stopgap GaugeTypeSelector layout fix and remove header from it

--- a/gauges/GaugeTypeSelector.sass
+++ b/gauges/GaugeTypeSelector.sass
@@ -1,7 +1,9 @@
 @import "../sass/css3-mixins"
 
 .gauge-type-selector
-  text-align: center 
+  text-align: center
+  overflow-x: auto
+  white-space: nowrap
 
   .gauge-radio
     cursor: pointer
